--- a/ColorGame.html
+++ b/ColorGame.html
@@ -8,13 +8,18 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Great <span id="colorDisplay">RGB</span> color game</h1>
+    <h1>
+      Great<br />
+      <span id="colorDisplay">RGB</span>
+      <br />
+      color game
+    </h1>
 
     <div id="stripe">
       <button id="reset">New Colors</button>
       <span id="message"></span>
-      <button id="easyBtn">Easy</button>
-      <button id="hardBtn">Hard</button>
+      <button class="mode ">Easy</button>
+      <button class="mode selected">Hard</button>
     </div>
 
     <div id="container">
